--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -178,10 +178,12 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
 
           header .logo-header {
             width: 100%;
-                text-align: center;
-                position: relative;
-                padding-top: 10px;
-                height: 100px;
+            text-align: center;
+            position: relative;
+            padding-top: 10px;
+            height: 100px;
+            float: left;
+            top: 0;
           }
 
           header div.container.header {
