--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -11,6 +11,9 @@ out: ../css/product-page.css, sourcemap: true, compress: true
       }
     }
   }
+  #product-maker {
+    padding: 0;
+  }
 }
 
 @media (max-width: 767px) {
