--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -16,6 +16,17 @@ out: ../css/product-page.css, sourcemap: true, compress: true
   }
 }
 
+@media (max-width:1750px){
+  #product-page-view {
+    #product-main {
+      width: 62.666667%;
+    }
+    #product-maker {
+      width: 20%;
+    }
+  }
+}
+
 @media (max-width: 767px) {
   #product-page-content {
     #product-page-view{
