--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -13,16 +13,30 @@ out: ../css/product-page.css, sourcemap: true, compress: true
   }
   #product-maker {
     padding: 0;
+    .project-share-new {
+      padding-left: 0;
+    }
   }
 }
 
 @media (max-width:1750px){
   #product-page-view {
     #product-main {
-      width: 62.666667%;
+      width: 63.3%;
     }
     #product-maker {
       width: 20%;
+    }
+  }
+}
+
+@media (max-width:1395px){
+  #product-page-view {
+    #product-main {
+      width: 60.3%;
+    }
+    #product-maker {
+      width: 23%;
     }
   }
 }
