--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -30,7 +30,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
   }
 }
 
-@media (max-width:1470px){
+@media (max-width:1470px) and (min-width:999px){
   #product-page-view {
     #product-main {
       width: 60.3%;
