--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -19,7 +19,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
   }
 }
 
-@media (max-width:1750px){
+@media (max-width:1750px) and (min-width:1471px){
   #product-page-view {
     #product-main {
       width: 63.3%;
