--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -30,7 +30,7 @@ out: ../css/product-page.css, sourcemap: true, compress: true
   }
 }
 
-@media (max-width:1470px) and (min-width:999px){
+@media (max-width:1470px) and (min-width:1180px){
   #product-page-view {
     #product-main {
       width: 60.3%;
@@ -40,6 +40,18 @@ out: ../css/product-page.css, sourcemap: true, compress: true
     }
   }
 }
+
+@media (max-width:1180px) and (min-width:999px){
+  #product-page-view {
+    #product-main {
+      width: 57.3%;
+    }
+    #product-maker {
+      width: 25%;
+    }
+  }
+}
+
 
 @media (max-width: 767px) {
   #product-page-content {
