--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -124,6 +124,9 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                   > div {
                     top: -65px;
                     font-size: 28px;
+                    width: 100%;
+                    padding: 0;
+                    text-align: center;
                   }
                 }
               }
