--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -47,6 +47,15 @@
     main#reg-page section#register-wrap #register #social-register #social-login-elements {
       margin: 0;
     }
+
+    input[type="checkbox"] {
+         -webkit-appearance: checkbox !important;
+         -moz-appearance: checkbox !important;
+         -ms-appearance: checkbox !important;
+         -o-appearance: checkbox !important;
+         appearance: checkbox !important;
+    }
+
   }
 </style>
 
