--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -386,7 +386,7 @@ echo $this->render('partials/header/metaheader.phtml');
 
 <section id="site-header-container"></section>
 
-<script src="/theme/react/app-header/header.js" type="text/javascript"></script>
+<script src="/theme/react/header.js" type="text/javascript"></script>
 
 <?php $this->inlineScript()->appendScript(
     '$(document).ready(function(){
