--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -52,6 +52,7 @@
 
       .container-checkbox-remember-me input[type="checkbox"] {
           opacity: 0;
+          position: absolute;
       }
 
       .container-checkbox-remember-me label {
