--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -384,15 +384,8 @@ echo $this->render('partials/header/metaheader.phtml');
     var json_cat_title_left = <?php echo  Zend_Json::encode($cat_title_left);?>;
     var json_tabs_left= <?php echo  Zend_Json::encode($tabs_left);?>;
 </script>
-
-<style>
-  #site-header-container {
-    display: none;
-  }
-</style>
-
+<link href="/theme/react/assets/css/header.css" type="text/css" rel="stylesheet" />
 <section id="site-header-container"></section>
-
 <script src="/theme/react/header.js" type="text/javascript"></script>
 
 <?php $this->inlineScript()->appendScript(
